--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: #F4F4F6 0% 0% no-repeat padding-box;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +22,40 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-Component-Header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 23px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  opacity: 1;
+  min-height: 72px;
+}
+.right-element {
+  float: right;
+  font: normal normal medium 16px/19px Montserrat;
+  letter-spacing: 0px;
+  color: #6D8187;
+  opacity: 1;
+  font-size: 16px;
+  margin-right: 50px;
+  padding: 5px;
+}
+
+.user {
+  float: left;
+  font: normal normal medium 16px/19px Montserrat;
+  letter-spacing: 0px;
+  color: #6D8187;
+  opacity: 1;
+  font-size: 16px;
+  margin-left: 85px;
+  padding: 5px;
 }
 
 .App-link {
