--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -90,6 +90,27 @@
   color: red;
 }
 
+table {
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000014;
+  border-radius: 12px;
+  opacity: 1;
+  top: 336px;
+  left: 120px;
+  width: auto;
+}
+td{
+  text-align: left;
+  font: normal normal medium 20px/24px Montserrat;
+  letter-spacing: 0px;
+  color: #5285EC;
+  opacity: 1;
+
+}
+tr{
+  height: 20px;
+}
+
 
 .App-link {
   color: #61dafb;
