--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -58,6 +58,10 @@
   padding: 5px;
 }
 
+img{
+	padding: 15px;
+}
+
 .card-view {
   background: #FFFFFF 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 6px #0000000A;
