--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -115,6 +115,15 @@ tr{
   height: 20px;
 }
 
+.MuiDataGrid-main {
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000014;
+  border-radius: 12px;
+  opacity: 1;
+  margin-left:20px;
+  margin-right:20px;
+}
+
 
 .App-link {
   color: #61dafb;
