--- a/frontend/src/stylesheets/CenterView.css
+++ b/frontend/src/stylesheets/CenterView.css
@@ -3,7 +3,7 @@
     box-shadow: 0px 3px 6px #0000000A;
     border-radius: 12px;
     opacity: 1;
-    height: 250px;
+    height: 300px;
     width: 340px;
   }
   
@@ -25,7 +25,15 @@
     margin-bottom: 10px;
   }
   
-  .card-view span {
-    font-size: 10px;
-    color: red;
+  .loginButton{
+    background: #5285EC 0% 0% no-repeat padding-box;
+    border-radius: 8px;
+    opacity: 1;
+    width: 244px;
+    height: 40px;
+    text-align: center;
+    font: normal normal medium 14px/18px Montserrat;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    opacity: 1;
   }
